[workspace]
members = [
    "src/common/base",
    "src/placement-center",
    "src/cmd",
    "src/protocol",
]


resolver = "2"


[workspace.package]
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"


[workspace.dependencies]
bincode = "1.3.3"
prost = "0.14.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8.0"
toml = "0.9.8"
tonic = { version = "0.1.0-beta.1" }
thiserror = "2.0.18"   
rocksdb = "0.22.0"
log = "0.4.14"
log4rs = "1.0.0"
openraft = { git = "https://github.com/databendlabs/openraft.git", features = [
    "serde",
    "type-alias",
    "loosen-follower-log-revert",
] }

## workspaces members
placement-center = { path = "src/placement-center" }
cmd = { path = "src/cmd" }
protocol = { path = "src/protocol" }
common-base = { path = "src/common/base" }