[package]
name = "cmd"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }


# [dependencies]
# [[bin]]
# name = "placement-center"
# path = "src/placement-center/server.rs"


# [[bin]]
# name = "mqtt-broker"
# path = "src/mqtt-broker/server.rs"