[package]
name = "cmd"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
common-base.workspace = true
placement-center.workspace = true
log.workspace = true
log4rs.workspace = true

 [[bin]]
 name = "placement-center"
 path = "src/placement-center/server.rs"


# [[bin]]
# name = "mqtt-broker"
# path = "src/mqtt-broker/server.rs"