[package]
name = "placement-center"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bincode.workspace = true
log.workspace = true
prost.workspace = true
rocksdb.workspace = true
serde.workspace = true
serde_json.workspace = true
common-base.workspace = true
raft = { git = "https://github.com/robustmq/raft-rs", features = [
    "prost-codec",
], default-features = false }