[package]
name = "common-base"
version.workspace = true
edition.workspace = true
license.workspace = true


[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
tonic.workspace = true
thiserror.workspace = true
rocksdb.workspace = true
log.workspace = true
log4rs.workspace = true